recipes/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: recipes
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.112
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: recipes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  namespace: recipes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes
  template:
    metadata:
      labels:
        app: recipes
    spec:
      volumes:
        - name: recipes-vol
          persistentVolumeClaim:
            claimName: recipes-pvc
      containers:
      - name: recipes
        image: vabene1111/recipes:1.5.19
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: "/opt/recipes/mediafiles"
            name: recipes-vol
          - mountPath: "/config"
            name: recipes-vol
---
