recipes/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: recipes
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.201
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: recipes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-vol
          persistentVolumeClaim:
            claimName: recipes-postgres-local-pvc
      containers:
      - name: postgres
        image: postgres:16
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: postgres-vol
---
